--- a/transformers.ipynb
+++ b/transformers.ipynb
@@ -97,7 +97,7 @@
     "        self.root = root\n",
     "        file_dict = {\n",
     "            \"training\": \"mitbih_train.csv\",\n",
-    "            \"validation\": \"mitbih_test.csv\",  # Assuming same file for both test and validation\n",
+    "            \"validation\": \"mitbih_train.csv\",  # Assuming same file for both test and validation\n",
     "            \"testing\": \"mitbih_test.csv\"\n",
     "        }\n",
     "        \n",
@@ -469,25 +469,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Batch: [tensor([[0.9472, 0.8894, 0.6231,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9496, 0.7240, 0.2344,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [1.0000, 0.7030, 0.2335,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "Train Batch: [tensor([[1.0000, 0.8250, 0.2500,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9364, 0.8497, 0.4220,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.8952, 0.6617, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
       "        ...,\n",
-      "        [0.9044, 0.7703, 0.4180,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [1.0000, 0.7919, 0.3108,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9583, 0.7578, 0.2578,  ..., 0.0000, 0.0000, 0.0000]]), tensor([0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 4, 4, 0, 0, 0, 0, 0, 0, 3, 0, 0, 0, 4, 4,\n",
-      "        4, 0, 0, 0, 0, 0, 2, 0, 0, 2, 2, 0, 0, 0, 0, 1, 0, 4, 0, 1, 0, 0, 0, 0,\n",
-      "        0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 0, 0, 4, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 4,\n",
-      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 4, 0, 4, 0,\n",
-      "        0, 0, 0, 0, 0, 0, 0, 0])]\n",
-      "Validation Batch: [tensor([[1.0000, 0.7583, 0.1116,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9084, 0.7839, 0.5311,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.7301, 0.2124, 0.0000,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9588, 0.7341, 0.5693,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.8571, 0.7455, 0.5625,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9048, 0.6735, 0.2871,  ..., 0.0000, 0.0000, 0.0000]]), tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 1, 0, 4, 0, 4, 0, 0, 4, 0, 0, 0,\n",
+      "        0, 0, 0, 2, 0, 0, 0, 2, 0, 4, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 2, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 4, 0, 4, 0, 0, 1, 0, 0, 0, 0, 0, 0,\n",
+      "        1, 2, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 4,\n",
+      "        2, 0, 0, 0, 4, 0, 0, 0])]\n",
+      "Validation Batch: [tensor([[0.9779, 0.9265, 0.6814,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9601, 0.8632, 0.4615,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [1.0000, 0.6595, 0.1865,  ..., 0.0000, 0.0000, 0.0000],\n",
       "        ...,\n",
-      "        [1.0000, 0.8124, 0.4096,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0579, 0.0211, 0.2158,  ..., 0.0000, 0.0000, 0.0000],\n",
-      "        [0.9304, 0.9046, 0.5517,  ..., 0.0000, 0.0000, 0.0000]]), tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        [1.0000, 0.8201, 0.4259,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [1.0000, 0.8761, 0.4720,  ..., 0.0000, 0.0000, 0.0000],\n",
+      "        [0.9361, 0.9567, 0.4948,  ..., 0.0000, 0.0000, 0.0000]]), tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
@@ -597,8 +597,16 @@
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "You are using a CUDA device ('NVIDIA GeForce RTX 3070') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
+      "c:\\Users\\randa\\OneDrive\\Documents\\GitHub\\Neural-Networks-Project\\.venv\\Lib\\site-packages\\pytorch_lightning\\callbacks\\model_checkpoint.py:612: UserWarning: Checkpoint directory ./model/checkpoints exists and is not empty.\n",
+      "  rank_zero_warn(f\"Checkpoint directory {dirpath} exists and is not empty.\")\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
       "\n",
       "  | Name     | Type               | Params\n",
@@ -616,7 +624,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b853460781ba4bd1a2d0561d5d347148",
+       "model_id": "94ca9071f8eb4be2bdd80a47ba4efa0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -640,7 +648,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4eba9ca1e26e460eb68264abb878abd6",
+       "model_id": "9be84d52ba9a48b8a6923e06a50b551a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -654,7 +662,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1093f118f8a4b249cc3d84efca075e2",
+       "model_id": "23120b4411b44ab1b7effdb9ae18e269",
        "version_major": 2,
        "version_minor": 0
       },
@@ -669,13 +677,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0, global step 685: 'val_acc' reached 96.95322 (best 96.95322), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n"
+      "Epoch 0, global step 685: 'val_acc' reached 97.60034 (best 97.60034), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "617a6523a47e4f8aa24b2b5977812154",
+       "model_id": "65fc7e77635d4bd99b9b1b86ecb4187d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,13 +698,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1, global step 1370: 'val_acc' was not in top 1\n"
+      "Epoch 1, global step 1370: 'val_acc' reached 98.41926 (best 98.41926), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "433914b3694f4b529922729914e53709",
+       "model_id": "529a735796484d24b26895a15a9e8a19",
        "version_major": 2,
        "version_minor": 0
       },
@@ -711,13 +719,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2, global step 2055: 'val_acc' reached 97.44199 (best 97.44199), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n"
+      "Epoch 2, global step 2055: 'val_acc' reached 98.74820 (best 98.74820), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d49e2a02c82547dcbc18cf91185925bc",
+       "model_id": "03041aec6f3a4948875f02d39fd73dce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -732,13 +740,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3, global step 2740: 'val_acc' was not in top 1\n"
+      "Epoch 3, global step 2740: 'val_acc' reached 98.90239 (best 98.90239), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5cac335108742f98ac23e532f0236fe",
+       "model_id": "08a8a651bb184ae4b83e167d1937f23c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -753,13 +761,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4, global step 3425: 'val_acc' reached 97.48310 (best 97.48310), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n"
+      "Epoch 4, global step 3425: 'val_acc' reached 99.35925 (best 99.35925), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f556071a985044ababbdf046ad84e419",
+       "model_id": "336b01ab17b545628ba1e03e3c41429a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -774,13 +782,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 5, global step 4110: 'val_acc' reached 97.52421 (best 97.52421), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n"
+      "Epoch 5, global step 4110: 'val_acc' was not in top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abb5b7c491b1454e97ce28803c7b4d60",
+       "model_id": "0492597263014adeb89660537e9b5d21",
        "version_major": 2,
        "version_minor": 0
       },
@@ -795,13 +803,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 6, global step 4795: 'val_acc' reached 97.62927 (best 97.62927), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n"
+      "Epoch 6, global step 4795: 'val_acc' was not in top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f06b0d0d48d84519850e38c17cbe0482",
+       "model_id": "9c9fa7d1bbf54952a0b4d7e368e9bbb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -816,13 +824,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 7, global step 5480: 'val_acc' was not in top 1\n"
+      "Epoch 7, global step 5480: 'val_acc' reached 99.50773 (best 99.50773), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef85a55ad9c247f98e70acfd20509696",
+       "model_id": "cda600c227d84e63b17681d2a3b726a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -843,7 +851,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cce21a31f41b4acbaecb6df5eb24ad1e",
+       "model_id": "3686a61275aa4ba1990ee06f167909cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -858,13 +866,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 9, global step 6850: 'val_acc' reached 97.70235 (best 97.70235), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n"
+      "Epoch 9, global step 6850: 'val_acc' was not in top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a78e98459af140c3a87c2f2d40ca1352",
+       "model_id": "8ccfc38f73964359b255a04e6f0612eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -885,7 +893,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4f7cbe2823d46d8baf84be62dce6772",
+       "model_id": "0a49d68128494f51bbdd65b90d2737e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -900,13 +908,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 11, global step 8220: 'val_acc' was not in top 1\n"
+      "Epoch 11, global step 8220: 'val_acc' reached 99.61967 (best 99.61967), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7da8e6578b945498ebf0de1ec4e1508",
+       "model_id": "b8509fd39b83401b8f2aefe342bbba4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -927,7 +935,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1c7cca6be214f9098094d7294ea20fe",
+       "model_id": "cb86822339b742e488ecfeff721e71c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -942,13 +950,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 13, global step 9590: 'val_acc' was not in top 1\n"
+      "Epoch 13, global step 9590: 'val_acc' reached 99.63680 (best 99.63680), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d055b9fef6642a18722eb5cdd3e2890",
+       "model_id": "d8a7e4d373154ddcb0d02fe1cb27aa3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -963,13 +971,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 14, global step 10275: 'val_acc' reached 97.72977 (best 97.72977), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n"
+      "Epoch 14, global step 10275: 'val_acc' was not in top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ab7e398d83948c7b1d9406c32386170",
+       "model_id": "ffd7c6ecaa294d5093cc2a59d83184e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -984,13 +992,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 15, global step 10960: 'val_acc' reached 97.83026 (best 97.83026), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n"
+      "Epoch 15, global step 10960: 'val_acc' was not in top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61c06dda2e53482e890a5d51f3357633",
+       "model_id": "17900d560540413a894704483e31afc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1005,13 +1013,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 16, global step 11645: 'val_acc' was not in top 1\n"
+      "Epoch 16, global step 11645: 'val_acc' reached 99.70304 (best 99.70304), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19a1c958bb1345d896a805b75cb3a0e3",
+       "model_id": "ce616f90a3c6444f9aaf84726ac3317d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1026,13 +1034,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 17, global step 12330: 'val_acc' reached 97.83482 (best 97.83482), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n"
+      "Epoch 17, global step 12330: 'val_acc' reached 99.70761 (best 99.70761), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3a77e82532a4fb48885b8bb1e6c8aac",
+       "model_id": "68438fa9593f407d80a42f444c73becd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1053,7 +1061,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b74073f7b8da493a96c8ba95118264e1",
+       "model_id": "a298527b7d19437c803c240cf76ab76f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1074,7 +1082,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e46833fcd2c0489781759c1494ef07be",
+       "model_id": "3f7f0d52d5504ee5a1a0d46fc955d72c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1095,7 +1103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9955a89b6fa4d2583a63585a2d3d73e",
+       "model_id": "81428e97ad124c92badbccbfee0ade30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1110,7 +1118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 21, global step 15070: 'val_acc' reached 97.84853 (best 97.84853), saving model to './model/checkpoints\\\\ecg-transformer.ckpt' as top 1\n",
+      "Epoch 21, global step 15070: 'val_acc' reached 99.73045 (best 99.73045), saving model to './model/checkpoints\\\\ecg-transformer-v2.ckpt' as top 1\n",
       "`Trainer.fit` stopped: `max_epochs=22` reached.\n"
      ]
     }
@@ -1149,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc3f68393dff4a9b99b340b8f8a85a4a",
+       "model_id": "41bc19868acf4dad8b872325da50f1ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1216,7 +1224,7 @@
        "[{'test_acc': 97.86064910888672, 'test_loss': 0.12301717698574066}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,6 +1233,7 @@
     "# Testing\n",
     "print(f\"Loading checkpoint: {ckpt_name}.ckpt\")\n",
     "model = model.load_from_checkpoint(\n",
+    "    #change this when loading different models\n",
     "    os.path.join(save_path, \"checkpoints\", ckpt_name+\".ckpt\")\n",
     ")\n",
     "trainer.test(model, datamodule=datamodule)"
